--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,5 +51,10 @@
         var image = document.getElementById("image");
         image.src = "img/imageHeader.jpg";
     }
+
+    subClick = function(){
+    document.getElementById('subForm').style.display ='block';
+};
+
     </script>
 
