--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,7 +37,7 @@
              <img src="img/ImageHeader2.jpg" class="image" id="image" alt="imageHeader"/>
              <div class="imgText">
                    <h1 class="title"><span>Why I Should Have Stayed At Home</span></h1>
-                   <span><button class="subscribebutt" type="button" value="button text" onclick="subClick();">Subscribe</button></span>
+                  <!--  <span><button class="subscribebutt" type="button" value="button text" onclick="subClick();">Subscribe</button></span>  --> 
              </div>
          </div>
         </div>
