--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -51,7 +51,9 @@
             "url": "{{site.baseurl}}/category/",
     "urlTarget": "_blank" },
             { "id": "FR" },
-            { "id": "US" },
+            { "id": "US",  "url": "{{site.baseurl}}/category/usa",
+    "urlTarget": "_blank"
+         },
             { "id": "SK" },
             { "id": "SI" },
             { "id": "ES" },
