--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -89,7 +89,7 @@
         <div class="blogEntry">       
             <div class='blogTitle'>
                 <a href="{{site.baseurl}}{{post.url}}" class="blogLink"><h3 class="tithead">{{ post.name }}</h3></a>
-                <h4 class='titleDesc'>{{ title_description }} <span class='light'>{{ post.url | date: "%b %-d, %Y" }}</span> </h4>
+                <h4 class='titleDesc'>{{ post.title_description }} <span class='light'>{{ post.url | date: "%b %-d, %Y" }}</span> </h4>
             </div>
             <div>
                 <img class="bigPostImage" src="{{ post.one_path }}" alt="{{post.title_description}}">
