--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -3,10 +3,10 @@ layout: page
 permalink: /category/
 ---
 <head>
-                <link rel="stylesheet" type="text/css" media="screen" href="{{ site.baseurl }}assets/css/main.css" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<base href="{{ site.baseurl }}">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+ <link rel="stylesheet" type="text/css" media="screen" href="{{ site.baseurl }}assets/css/main.css" />
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <base href="{{ site.baseurl }}">
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -34,7 +34,7 @@ permalink: /category/
 <div class="category-box">
         <div class="whiteBox smallCategBlog">
                 <a  href="{{site.baseurl}}{{ post.url }}">
-                    <img class="categ-img" src="{{site.baseurl}}{{ post.one_path }}" alt="beijing">
+                    <img class="categ-img" src="{{site.baseurl}}{{ post.one_path }}" alt="{{ post.blog_title }}">
                     <div class="smallBlogText">{{ post.blog_title }}
                     <span class="postDate">{{ post.url | date: "%b %-d, %Y" }} </span></div>
                 </a>
@@ -51,5 +51,4 @@ permalink: /category/
 <div>
 {% include footer.html %}
 </div>
-<script href="{{site.baseurl}}/js/footer.js"></script>
 </body>
