--- a/_layouts/tagpage.html
+++ b/_layouts/tagpage.html
@@ -32,7 +32,7 @@ layout: default
 <div class="category-box">
         <div class="whiteBox smallCategBlog">
                 <a  href="{{site.baseurl}}{{ post.url }}">
-                    <img class="categ-img" src="{{site.baseurl}}{{ post.one_path }}" alt="beijing">
+                    <img class="categ-img" src="{{site.baseurl}}{{ post.one_path }}" alt="{{site.baseurl}}{{ page.blog_title }}">
                     <div class="smallBlogText">{{ post.blog_title }}
                     <span class="postDate">{{ post.url | date: "%b %-d, %Y" }} </span></div>
                 </a>
@@ -49,5 +49,4 @@ layout: default
 <div>
 {% include footer.html %}
 </div>
-<script href="{{site.baseurl}}/js/footer.js"></script>
 </body>
