--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,10 @@
     </div>
     <!-- end of Nav bar with social medias -->
 
+    {% if site.tags != "" %}
+  {% include collecttags.html %}
+{% endif %}
+
 {% if site.tags == "" %}
     {% include collecttags.html %}
   {% endif %}
