--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -15,6 +15,8 @@ body{
     padding: 2%;
     display: inline-block;
     }
+svg{width: 2vw;
+}
 .socMed:hover {
     background-color: #f6f5f3;
     }
