--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -5,7 +5,7 @@ permalink: /category/
 <head>
  <link rel="stylesheet" type="text/css" media="screen" href="{{ site.baseurl }}assets/css/main.css" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <base href="{{ site.baseurl }}">
+ <base src="{{ site.baseurl }}">
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
